# cymbal

./: .gitignore  Cargo.toml  default.nix  flake.nix  readme.md  rust-toolchain.toml  rustfmt.toml  todo.md
cymbal/: Cargo.toml  build.rs  default-config.toml  example-config.toml
cymbal/src/: args.rs  cache.rs  channel.rs  color.rs  config.rs  ext.rs  lib.rs  main.rs  parser.rs  symbol.rs  symbol_stream.rs  template.rs  utils.rs  walker.rs  worker.rs  writer.rs
cymbal/src/cache/migrations/: 0_init.sql
cymbal/src/config/: loader.rs  raw.rs
cymbal/tests/: snapshots.rs
cymbal/tests/languages/: c.c  cpp.cpp  fish.fish  haskell.hs  json.json  kak.kak  lua.lua  nu.nu  ocaml.ml  odin.odin  python.py  rust.rs  teal.tl  tsx.tsx  typescript.ts  vine.vi
cymbal/tests/snapshots/: c.c.snap  cpp.cpp.snap  fish.fish.snap  haskell.hs.snap  json.json.snap  kak.kak.snap  kakrc.snap  lua.lua.snap  nu.nu.snap  ocaml.ml.snap  odin.odin.snap  python.py.snap  rust.rs.snap  teal.tl.snap  tsx.tsx.snap  typescript.ts.snap  vine.vi.snap
examples/: hello_world.vi
symbols/: Cargo.toml  default-config.toml
symbols/src/: args.rs  cache.rs  config.rs  ext.rs  main.rs  parser.rs  symbol.rs  template.rs  text.rs  utils.rs  worker.rs  writer.rs
symbols/src/config/: raw.rs
