[package]
name = "cymbal"
version = "0.8.0"
edition = "2024"
description = "search for symbols in a codebase"
license = "CC0-1.0"
repository = "https://github.com/enricozb/cymbal"
readme = "../readme.md"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.41"
clap = { version = "4.5.35", features = ["derive"] }
extend = "1.2.0"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml = { version = "0.9.5", features = ["parse", "serde"] }
tree-sitter = "0.25.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-fish = { git = "https://github.com/ram02z/tree-sitter-fish", version = "3.5.1" }
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-odin = "1.3.0"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
walkdir = "2.5.0"
indexmap = { version = "2.11.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
ignore = { version = "0.4.23", features = ["simd-accel"] }
async-channel = "2.5.0"

[lints]
workspace = true
