[package]
name = "cymbal"
version = "0.11.0"
edition = "2024"
description = "search for symbols in a codebase"
license = "CC0-1.0"
repository = "https://github.com/enricozb/cymbal"
readme = "../readme.md"

[dependencies]
anyhow = "1.0.97"
async-channel = "2.5.0"
chrono = "0.4.41"
clap = { version = "4.5.35", features = ["derive"] }
enum-assoc = "1.3.0"
extend = "1.2.0"
futures = "0.3.31"
ignore = { version = "0.4.23", features = ["simd-accel"] }
indexmap = { version = "2.11.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml = { version = "1.0.3", features = ["parse", "preserve_order", "serde"] }
tree-sitter = "0.26"
walkdir = "2.5.0"

[build-dependencies]
trix-build = "0.5"

[lints]
workspace = true
